[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Multi-agent codebase intelligence system for rapid FDE onboarding in production environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-yaml>=0.6.0",
    "tree-sitter-javascript>=0.23.0",
    "sqlglot>=25.0.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
cartographer = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
